--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ on: [push]
 jobs:
   check-application:
     runs-on: ubuntu-latest
-    stpes:
+    steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-go@v2
         with:
