--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,5 +1,8 @@
 name: ci-study-workflow
-on: [push]
+on:
+  pull_request:
+    branches:
+      - development
 jobs:
   check-application:
     runs-on: ubuntu-latest
